# Hourly-Wallpaper

./: .gitignore  Cargo.toml  README.md  Start.vbs  Stop.bat  config.example.yaml  config.yaml
src/: configManager.rs  config_manager.rs  main.rs
src/api/: mod.rs  status_error.rs  wallpaper.rs  wallpaper_api_config.rs
