[package]
name = "hourly_wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "stream"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
wallpaper = "3.2.0"
yaml-rust = "0.4.5"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"